--- a/assets/css/extended/container-overrides.scss
+++ b/assets/css/extended/container-overrides.scss
@@ -8,3 +8,13 @@
     padding: 0 1rem;
 }
 
+#header-desktop .header-title {
+    flex: 0 0 auto;
+    min-width: auto;
+}
+
+#header-desktop .menu {
+    flex: 1 1 auto;
+    min-width: 0;
+}
+
